package client.customComponents;

public interface CustomTile {

}
