@startuml

title __CUSTOMCOMPONENTS's Class Diagram__\n

  namespace client {
    namespace customComponents {
      interface client.customComponents.CustomTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.FriendRequestTile {
          - acceptBT : JButton
          - declineBT : JButton
          - name : JLabel
          + FriendRequestTile()
          + getNick()
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.FriendTile {
          - name : JLabel
          - sfidaBT : JButton
          + FriendTile()
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.RichiestaSfidaTile {
          - acceptBT : JButton
          - declineBT : JButton
          - name : JLabel
          + RichiestaSfidaTile()
          + getNick()
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.SfidaTile {
          - friend : JLabel
          - parola : JLabel
          - sendBT : JButton
          - traduzione : JTextField
          + SfidaTile()
          + SfidaTile()
          + getTraduzione()
          + setListener()
          + setWord()
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.VerticalFlowLayout {
          {static} + BOTTOM : int
          {static} + CENTER : int
          {static} + LEFT : int
          {static} + RIGHT : int
          {static} + TOP : int
          ~ _halign : int
          ~ _hgap : int
          ~ _valign : int
          ~ _vgap : int
          + VerticalFlowLayout()
          + VerticalFlowLayout()
          + VerticalFlowLayout()
          + addLayoutComponent()
          + getHalignment()
          + getHgap()
          + getValignment()
          + getVgap()
          + layoutContainer()
          + minimumLayoutSize()
          + preferredLayoutSize()
          + removeLayoutComponent()
          + setAlignment()
          + setHgap()
          + setVgap()
          + toString()
      }
    }
  }
  

  client.customComponents.FriendRequestTile .up.|> client.customComponents.CustomTile
  client.customComponents.FriendRequestTile -up-|> javax.swing.JPanel
  client.customComponents.FriendTile .up.|> client.customComponents.CustomTile
  client.customComponents.FriendTile -up-|> javax.swing.JPanel
  client.customComponents.RichiestaSfidaTile .up.|> client.customComponents.CustomTile
  client.customComponents.RichiestaSfidaTile -up-|> javax.swing.JPanel
  client.customComponents.SfidaTile .up.|> client.customComponents.CustomTile
  client.customComponents.SfidaTile -up-|> javax.swing.JPanel
  client.customComponents.VerticalFlowLayout .up.|> java.awt.LayoutManager
  client.customComponents.VerticalFlowLayout .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
